# data_dp_ssrs_migration

./: .env.example  .gitignore  PSScriptAnalyzerSettings.psd1  README.md  compass_artifact_wf-d579d1b6-caba-4dc1-9a27-43aa1e28281f_text_markdown.md  justfile  pyproject.toml  run.bat  ssrs-pbirs-migration-architecture.drawio  ssrs-pbirs-migration-implementation.md  team-sprint.config.yaml
RsMigration/: RsMigration.psd1  RsMigration.psm1
RsMigration/Private/: Copy-RsMigrationBackup.ps1  Get-KeyVaultSecret.ps1  Invoke-RsKeyMgmt.ps1  Invoke-RsReportRender.ps1  Join-RsMigrationPath.ps1  New-RsMigrationBlobCredential.ps1  New-RsMigrationRestSession.ps1  Resolve-RsConnection.ps1  Restart-RsService.ps1  Test-RsDataSourceConnection.ps1
RsMigration/Public/: Backup-RsMigrationDatabase.ps1  Backup-RsMigrationKey.ps1  Export-RsMigrationInventory.ps1  Import-RsMigrationSubscription.ps1  Invoke-RsMigration.ps1  Invoke-RsMigrationValidation.ps1  Remove-RsMigrationStaleKey.ps1  Reset-RsMigrationEncryptedContent.ps1  Restore-RsMigrationDatabase.ps1  Restore-RsMigrationKey.ps1  Set-RsMigrationDataSource.ps1  Set-RsMigrationDatabase.ps1
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
rs_migration/: __init__.py  inventory.py  keyvault.py  rekey.py  rest_client.py  runbook.py  validate.py
scripts/: qg-ps.ps1
tests/pester/: Backup-RsMigrationDatabase.Tests.ps1  ConfigureTarget.Tests.ps1  EncryptionKey.Tests.ps1  Export-Inventory.Tests.ps1  Import-RsMigrationSubscription.Tests.ps1  Invoke-RsMigration.Tests.ps1  Reset-EncryptedContent.Tests.ps1  Restore-RsMigrationDatabase.Tests.ps1  Scaffold.Tests.ps1  Set-DataSource.Tests.ps1  Validation.Tests.ps1
(+14 files in other folders)
