[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-dp-ssrs-migration"
dynamic = ["version"]
description = "SSRS to PBIRS migration orchestrator (Python side)."
requires-python = ">=3.10"
dependencies = [
    "azure-keyvault-secrets",
    "azure-identity",
    "requests",
    "requests_ntlm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "requests-mock",
]

[project.scripts]
rs-migration = "rs_migration.runbook:main"

# Single source of truth: rs_migration/__init__.py:__version__
# Hatchling reads it for the dynamic project version and `hatch version
# <segment>` bumps the same attribute in place.
[tool.hatch.version]
path = "rs_migration/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["rs_migration"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-ra"
